# nanodns-rs

./: .gitpod.yaml  Cargo.toml  README.md  names.conf
.gitpod/: Dockerfile
src/: dns.rs  main.rs
